# AOG-TaskController

./: .clang-format  .cmake-format.yaml  AOGDissector.lua  CMakeLists.txt  b.bat  readme.md
.github/: FUNDING.yml
.github/workflows/: build.yml  linting.yml
include/: app.hpp  settings.hpp  task_controller.hpp  udp_connections.hpp
src/: app.cpp  console_logger.cpp  logging.cpp  main.cpp  settings.cpp  task_controller.cpp  udp_connections.cpp
